sfSandBoxCode/force-app/main/default/objects/Casuals_Timesheet__c/Casuals_Timesheet__c.object-meta.xml
<CustomObject>
    <label>Assignment Timesheet</label>
    <nameField>
        <displayFormat>TS-{0000}</displayFormat>
        <label>Timesheet Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assignment Timesheets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>