sfSandBoxCode/force-app/main/default/objects/Casuals_Timesheet__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <label>Actual End Date</label>
    <type>Date</type>
</CustomField>