sfSandBoxCode/force-app/main/default/objects/Casuals_Timesheet__c/fields/EPR__c.field-meta.xml
<CustomField>
    <fullName>EPR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EPR</label>
    <referenceTo>Electronic_Payment_Request__c</referenceTo>
    <relationshipLabel>Assignment Timesheets</relationshipLabel>
    <relationshipName>Assignment_Timesheets</relationshipName>
    <type>Lookup</type>
</CustomField>