sfSandBoxCode/force-app/main/default/objects/Casuals_Timesheet__c/fields/Job_Requisition__c.field-meta.xml
<CustomField>
    <fullName>Job_Requisition__c</fullName>
    <label>Job Assignment</label>
    <referenceTo>Casuals_Job_Assignment__c</referenceTo>
    <relationshipName>Timesheets</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>