sfSandBoxCode/force-app/main/default/objects/Casuals_Timesheet__c/fields/PIN__c.field-meta.xml
<CustomField>
    <fullName>PIN__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PIN</label>
    <referenceTo>c2g__codaPurchaseInvoice__c</referenceTo>
    <relationshipName>Casuals_Timesheets</relationshipName>
    <type>Lookup</type>
</CustomField>