sfSandBoxCode/force-app/main/default/objects/Casuals_Timesheet__c/fields/Rate_Units__c.field-meta.xml
<CustomField>
    <fullName>Rate_Units__c</fullName>
    <formula>TEXT(  Job_Requisition__r.Casual_Job_Line_Item__r.Rate_Units__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rate Units</label>
    <type>Text</type>
</CustomField>