sfSandBoxCode/force-app/main/default/objects/Casuals_Timesheet__c/fields/Rate_Units_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Rate_Units_Quantity__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Hours, Days, Weeks OR Months within which the Job was done</description>
    <inlineHelpText>Hours, Days, Weeks OR Months within which the Job was done</inlineHelpText>
    <label>Number Of Rate Units</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>