sfSandBoxCode/force-app/main/default/objects/Casuals_Timesheet__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <label>Actual Start Date</label>
    <type>Date</type>
</CustomField>