sfSandBoxCode/force-app/main/default/objects/Casuals_Timesheet__c/fields/Total_Allowances__c.field-meta.xml
<CustomField>
    <fullName>Total_Allowances__c</fullName>
    <label>Total Allowances</label>
    <summarizedField>Casuals_Timesheet_Allowance__c.Total_Amount__c</summarizedField>
    <summaryForeignKey>Casuals_Timesheet_Allowance__c.Casuals_Timesheet__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>