sfSandBoxCode/force-app/main/default/objects/Casuals_Timesheet__c/fields/Total_Allowancess__c.field-meta.xml
<CustomField>
    <fullName>Total_Allowancess__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Actual allowance given to the Contractor</inlineHelpText>
    <label>Actual Total Allowances</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>