sfSandBoxCode/force-app/main/default/objects/Casuals_Timesheet__c/fields/Total_hours__c.field-meta.xml
<CustomField>
    <fullName>Total_hours__c</fullName>
    <label>Total hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>