sfSandBoxCode/force-app/main/default/objects/Casuals_Timesheet__c/fields/Voucher_Signed__c.field-meta.xml
<CustomField>
    <fullName>Voucher_Signed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Voucher Signed</label>
    <type>Checkbox</type>
</CustomField>