sfSandBoxCode/force-app/main/default/objects/Casuals_Timesheet__c/recordTypes/After_Approval.recordType-meta.xml
<RecordType>
    <fullName>After_Approval</fullName>
    <active>true</active>
    <label>After Approval</label>
</RecordType>