sfSandBoxCode/force-app/main/default/objects/Casuals_Timesheet__c/recordTypes/Before_Approval.recordType-meta.xml
<RecordType>
    <fullName>Before_Approval</fullName>
    <active>true</active>
    <label>Before Approval</label>
</RecordType>