sfSandBoxCode/force-app/main/default/objects/Casuals_Timesheet__c/validationRules/Cannot_Create_Before_Job_Approval.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Create_Before_Job_Approval</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
 ISNEW(),
 NOT(ISPICKVAL(Job_Requisition__r.Casual_Job_Line_Item__r.Casuals_Job__r.Status__c,&quot;Approved&quot;))
)</errorConditionFormula>
    <errorMessage>This timesheet cannot be created because the job associated with it is not approved</errorMessage>
</ValidationRule>