sfSandBoxCode/force-app/main/default/objects/Casuals_Timesheet__c/validationRules/Start_Date_not_larger_that_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_Date_not_larger_that_End_Date</fullName>
    <active>true</active>
    <errorConditionFormula>Actual_End_Date__c &lt;  Actual_Start_Date__c</errorConditionFormula>
    <errorMessage>Start Date cannot be larger than End Date</errorMessage>
</ValidationRule>