sfSandBoxCode/force-app/main/default/objects/Casuals_Timesheet__c/validationRules/Validate_Number_of_Rate_Units.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Number_of_Rate_Units</fullName>
    <active>true</active>
    <errorConditionFormula>Total_Amount__c  &gt;    Job_Requisition__r.Amount_Payable__c</errorConditionFormula>
    <errorMessage>The total amount payable is more that the payment amount specified at the job assignment. Kindly confirm the number of rate units and allowances.</errorMessage>
</ValidationRule>